# parallel-hw-2

./: CMakeLists.txt  README.md  build.gradle.kts  main  main.cpp  settings.gradle.kts
src/main/kotlin/: Bfs.kt  ForkJoinRealisation.kt  Graph.kt
src/test/kotlin/: BfsTest.kt
